--- a/config.ini
+++ b/config.ini
@@ -21,23 +21,23 @@ name = McCant's classifieds
 url = https://www.prismnet.com/~mmccants/tles/classfd.zip
 file = classfd.zip
 color = "#000000"
-etag = 5d74-5512478489397
-size = 23924
+etag = 5d6e-551378467451a
+size = 23918
 
 [source 2]
 name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 59353e82-e5d2a
-size = 941354
+etag = 5936fe2e-e5d1b
+size = 941339
 
 [source 3]
 name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#ff0000"
-etag = 59353f0d-15c2
+etag = 5936fe6f-15c2
 size = 5570
 
 [source 4]
@@ -45,7 +45,7 @@ name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#00ff00"
-etag = d48e1d58e3ddd21:257
+etag = fcda8e97efded21:257
 size = 24024
 
 [source 5]
@@ -53,7 +53,7 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = dbbe3024075113ea91e4c7cd94e74537
+etag = 3df57269e9a1b61f3fb0c4ee72b95ce3
 size = 23021
 
 #[source 6]
