--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@
 # If secs_per_step != 0, this simulates a faster step rate
 # Negative values to watch them go backwards...
 secs_per_step = 0
-default_location = "San Francisco, CA"
+default_location = "San Francisco, CA, USA"
 color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
@@ -29,15 +29,15 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 5936fe2e-e5d1b
-size = 941339
+etag = 5937528e-e5d6a
+size = 941418
 
 [source 3]
 name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#ff0000"
-etag = 5936fe6f-15c2
+etag = 593752d4-15c2
 size = 5570
 
 [source 4]
@@ -45,7 +45,7 @@ name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#00ff00"
-etag = fcda8e97efded21:257
+etag = 82cfbfa332dfd21:257
 size = 24024
 
 [source 5]
@@ -53,13 +53,13 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 3df57269e9a1b61f3fb0c4ee72b95ce3
+etag = 1a6dc372caa49e8881c9b596aacab3d4
 size = 23021
 
 #[source 6]
 # name  = "Celestrak BREEZE-M radius/B"
 # url   = http://www.celestrak.com/NORAD/elements/2012-044.txt
 # file  = 2012-044.txt
-# etag = 
-# size = 0
 # color = "#0000ff"
+# etag = _
+# size = 0
