--- a/config.ini
+++ b/config.ini
@@ -13,47 +13,47 @@ default_location = "San Francisco, CA, USA"
 color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
-window_size = 1200, 1000
+window_size = 1200, 800
 update_pause_ms = 100
 
 [source 1]
-name = McCant's classifieds
-url = https://www.prismnet.com/~mmccants/tles/classfd.zip
-file = classfd.zip
-color = "#000000"
-etag = 5d6e-551378467451a
-size = 23918
-
-[source 2]
 name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 5937528e-e5d6a
+etag = 59377cb8-e5d6a
 size = 941418
 
-[source 3]
+[source 2]
 name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
-color = "#ff0000"
-etag = 593752d4-15c2
+color = "#00ff00"
+etag = 59377cf4-15c2
 size = 5570
 
-[source 4]
+[source 3]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
-color = "#00ff00"
-etag = 82cfbfa332dfd21:257
+color = "#0000ff"
+etag = 53dfe26943dfd21:257
 size = 24024
+
+[source 4]
+name = McCant's classifieds
+url = https://www.prismnet.com/~mmccants/tles/classfd.zip
+file = classfd.zip
+color = "#ff0000"
+etag = 5d6e-551378467451a
+size = 23918
 
 [source 5]
 name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 1a6dc372caa49e8881c9b596aacab3d4
+etag = 8429e66ec98489c735627508cfd47c74
 size = 23021
 
 #[source 6]
