Adding threading primitives

--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 59377cb8-e5d6a
+etag = 59378d25-e5d6a
 size = 941418
 
 [source 2]
@@ -29,8 +29,8 @@ name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 59377cf4-15c2
-size = 5570
+etag = 59378d5e-151f
+size = 5407
 
 [source 3]
 name = Celestrak visual
@@ -53,7 +53,7 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 8429e66ec98489c735627508cfd47c74
+etag = 083cf441bcae0eaefac95ca6cbe9035f
 size = 23021
 
 #[source 6]
