--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 #
-# Satellite Data Visualizer config file
+# Satellite Data Visualizer for Python config file
 # Location and etag/size data will update automatically
 #
 # If you have a string with commas in it, quote it. Escape quotes.
@@ -13,7 +13,7 @@ default_location = "San Francisco, CA, USA"
 color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
-window_size = 1200, 800
+window_size = 1600, 900
 update_pause_ms = 100
 
 [source 1]
@@ -21,24 +21,24 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 59378d25-e5d6a
-size = 941418
+etag = 5937a6ee-e63a1
+size = 943009
 
 [source 2]
-name = AUS-CITY GPS
-url = http://www.tle.info/data/gps-ops.txt
-file = gps-ops.txt
-color = "#00ff00"
-etag = 59378d5e-151f
-size = 5407
-
-[source 3]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = 53dfe26943dfd21:257
+etag = 4783c12d54dfd21:257
 size = 24024
+
+[source 3]
+name = AUS-CITY GPS
+url = http://www.tle.info/data/gps-ops.txt
+file = gps-ops.txt
+color = "#00ff00"
+etag = 5937a746-15c2
+size = 5570
 
 [source 4]
 name = McCant's classifieds
@@ -53,7 +53,7 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 083cf441bcae0eaefac95ca6cbe9035f
+etag = a7bcb8bb0eccc16eb9c428ed7c21d041
 size = 23021
 
 #[source 6]
