Using t.Lock instead of t.Event for sync

--- a/config.ini
+++ b/config.ini
@@ -21,15 +21,15 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 5938600c-e635f
-size = 942943
+etag = 593a1fb4-e6623
+size = 943651
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = 3374d9bfc9dfd21:257
+etag = 5c54cbb7d5e0d21:257
 size = 24024
 
 [source 3]
@@ -37,7 +37,7 @@ name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 5938605c-15c2
+etag = 593a1ffd-15c2
 size = 5570
 
 [source 4]
@@ -45,15 +45,15 @@ name = McCant's classifieds
 url = https://www.prismnet.com/~mmccants/tles/classfd.zip
 file = classfd.zip
 color = "#ff0000"
-etag = 5d53-551609f1ee5d2
-size = 23891
+etag = 5d58-55171a883d080
+size = 23896
 
 [source 5]
 name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 6fe752a07f79d6dad949fee764a3ab58
+etag = b427fbb1970baae22e40fa2f02cb90d0
 size = 23021
 
 #[source 6]
