Config checking and defaulting

--- a/config.ini
+++ b/config.ini
@@ -14,7 +14,10 @@ color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
 window_size = 1700, 1000
-update_pause_ms = 100
+update_pause_ms = 20
+mpl_backend = TkAgg
+#mpl_backend = WxAgg
+#mpl_backend = Qt5Agg
 
 [source 1]
 name = AUS-CITY all
@@ -29,7 +32,7 @@ name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = 5c54cbb7d5e0d21:257
+etag = b8907d7ae6e0d21:257
 size = 24024
 
 [source 3]
@@ -53,7 +56,7 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = aa478b655b65a1e281cdbf94e9f3128e
+etag = dfecfcb91119c415bed8f734f360c9b6
 size = 23021
 
 #[source 6]
