--- a/config.ini
+++ b/config.ini
@@ -9,14 +9,15 @@
 # If secs_per_step != 0, this simulates a faster step rate
 # Negative values to watch them go backwards...
 secs_per_step = 0
+# Note: "Pontianak, Indonesia" and "Quito, Ecuador" are right on the equator
 default_location = "San Francisco, CA, USA"
 color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
 window_size = 1700, 1000
 update_pause_ms = 20
-mpl_backend = TkAgg
-#mpl_backend = WxAgg
+#mpl_backend = TkAgg
+mpl_backend = WxAgg
 #mpl_backend = Qt5Agg
 
 [source 1]
@@ -24,7 +25,7 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 593a301c-e6623
+etag = 593a42dd-e6623
 size = 943651
 
 [source 2]
@@ -40,7 +41,7 @@ name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 593a3059-15c2
+etag = 593a4320-15c2
 size = 5570
 
 [source 4]
