--- a/config.ini
+++ b/config.ini
@@ -9,15 +9,19 @@
 # If secs_per_step != 0, this simulates a faster step rate
 # Negative values to watch them go backwards...
 secs_per_step = 0
-# Note: "Pontianak, Indonesia" and "Quito, Ecuador" are right on the equator
+
+#  "San Francisco, CA, USA"
+#  "37.7749295,  -122.4194155,  15.60"
+#  "37:46:29.7N, -122:25:09.9E, 15.60"
 default_location = "San Francisco, CA, USA"
+
 color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
 window_size = 1700, 1000
 update_pause_ms = 20
-#mpl_backend = TkAgg
-mpl_backend = WxAgg
+mpl_backend = TkAgg
+#mpl_backend = WxAgg
 #mpl_backend = Qt5Agg
 
 [source 1]
@@ -25,15 +29,15 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 593a42dd-e6623
-size = 943651
+etag = 593a6d0c-e65eb
+size = 943595
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = b8907d7ae6e0d21:257
+etag = c2195d3df7e0d21:257
 size = 24024
 
 [source 3]
@@ -41,7 +45,7 @@ name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 593a4320-15c2
+etag = 593a6d52-15c2
 size = 5570
 
 [source 4]
@@ -57,7 +61,7 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = dfecfcb91119c415bed8f734f360c9b6
+etag = c5b955a82b5fda5b3c1908e2e4d89688
 size = 23021
 
 #[source 6]
