Further fixes and final work on Python 2.7 compatibility.

--- a/config.ini
+++ b/config.ini
@@ -29,15 +29,15 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 593a6d0c-e65eb
-size = 943595
+etag = 593a7414-e65b1
+size = 943537
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = c2195d3df7e0d21:257
+etag = 9874d008e1d21:257
 size = 24024
 
 [source 3]
@@ -45,7 +45,7 @@ name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 593a6d52-15c2
+etag = 593a745d-15c2
 size = 5570
 
 [source 4]
@@ -61,7 +61,7 @@ name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = c5b955a82b5fda5b3c1908e2e4d89688
+etag = eeca897d60f70c2a5dca8c6f234db3de
 size = 23021
 
 #[source 6]
