Better error recovery for sites that are inaccessible

--- a/config.ini
+++ b/config.ini
@@ -29,15 +29,15 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 593a7414-e65b1
-size = 943537
+etag = 5940e16d-e67c7
+size = 944071
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = 9874d008e1d21:257
+etag = fd165856d4e4d21:257
 size = 24024
 
 [source 3]
@@ -45,7 +45,7 @@ name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 593a745d-15c2
+etag = 5940e1bb-15c2
 size = 5570
 
 [source 4]
@@ -53,15 +53,15 @@ name = McCant's classifieds
 url = https://www.prismnet.com/~mmccants/tles/classfd.zip
 file = classfd.zip
 color = "#ff0000"
-etag = 5d58-55171a883d080
-size = 23896
+etag = 5d61-551e421ed1072
+size = 23905
 
 [source 5]
 name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = eeca897d60f70c2a5dca8c6f234db3de
+etag = 73086bae2eea2a00185f0e4503503802
 size = 23021
 
 #[source 6]
