Updates for compatibility and deprecating Python 2

--- a/config.ini
+++ b/config.ini
@@ -29,40 +29,40 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 5940e16d-e67c7
-size = 944071
+etag = 5ac13ef5-ee70c
+size = 976652
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = fd165856d4e4d21:257
-size = 24024
+etag = f4829eddf4c9d31:257
+size = 24528
 
 [source 3]
 name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 5940e1bb-15c2
-size = 5570
+etag = 5ac13f74-13dc
+size = 5084
 
 [source 4]
 name = McCant's classifieds
 url = https://www.prismnet.com/~mmccants/tles/classfd.zip
 file = classfd.zip
 color = "#ff0000"
-etag = 5d61-551e421ed1072
-size = 23905
+etag = 5db7-568cc3f9110e0
+size = 23991
 
 [source 5]
 name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 73086bae2eea2a00185f0e4503503802
-size = 23021
+etag = 4b700fe9d220849140915b845128528e
+size = 29697
 
 #[source 6]
 # name  = "Celestrak BREEZE-M radius/B"
