Updates and some cleanups for Python 3.7+

--- a/config.ini
+++ b/config.ini
@@ -13,56 +13,58 @@ secs_per_step = 0
 #  "San Francisco, CA, USA"
 #  "37.7749295,  -122.4194155,  15.60"
 #  "37:46:29.7N, -122:25:09.9E, 15.60"
-default_location = "San Francisco, CA, USA"
+default_location = "37.7749295,  -122.4194155,  15.60"
 
 color_outline = "#808080"
 color_alpha = 0.75
 user_agent = Mozilla/5.0
 window_size = 1700, 1000
 update_pause_ms = 20
+
+# Default backend
 mpl_backend = TkAgg
-#mpl_backend = WxAgg
-#mpl_backend = Qt5Agg
+# mpl_backend = WxAgg
+# mpl_backend = Qt5Agg
 
 [source 1]
 name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 5ac13ef5-ee70c
-size = 976652
+etag = 5d6de79d-ffe4f
+size = 1048143
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = f4829eddf4c9d31:257
-size = 24528
+etag = 064f1c62d51:0
+size = 26544
 
 [source 3]
 name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 5ac13f74-13dc
+etag = 5d6de81a-13dc
 size = 5084
 
 [source 4]
-name = McCant's classifieds
+name = McCants classifieds
 url = https://www.prismnet.com/~mmccants/tles/classfd.zip
 file = classfd.zip
 color = "#ff0000"
-etag = 5db7-568cc3f9110e0
-size = 23991
+etag = 2f9b-59193aae05859
+size = 12187
 
 [source 5]
 name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 4b700fe9d220849140915b845128528e
-size = 29697
+etag = 51c541b7952e13833b815baa750c6288
+size = 37259
 
 #[source 6]
 # name  = "Celestrak BREEZE-M radius/B"
