--- a/config.ini
+++ b/config.ini
@@ -31,23 +31,23 @@ name = AUS-CITY all
 url = http://www.tle.info/data/ALL_TLE.ZIP
 file = ALL_TLE.ZIP
 color = "#ffffff"
-etag = 5d6de79d-ffe4f
-size = 1048143
+etag = 626b8f4f-14ed12
+size = 1371410
 
 [source 2]
 name = Celestrak visual
 url = http://www.celestrak.com/NORAD/elements/visual.txt
 file = visual.txt
 color = "#0000ff"
-etag = 064f1c62d51:0
-size = 26544
+etag = 568db8418f5bd81:0
+size = 27048
 
 [source 3]
 name = AUS-CITY GPS
 url = http://www.tle.info/data/gps-ops.txt
 file = gps-ops.txt
 color = "#00ff00"
-etag = 5d6de81a-13dc
+etag = 626b8fce-13dc
 size = 5084
 
 [source 4]
@@ -55,16 +55,16 @@ name = McCants classifieds
 url = https://www.prismnet.com/~mmccants/tles/classfd.zip
 file = classfd.zip
 color = "#ff0000"
-etag = 2f9b-59193aae05859
-size = 12187
+etag = 2fad-5ddb8d57bc83d
+size = 12205
 
 [source 5]
 name = Planet Labs
 url = http://ephemerides.planet-labs.com/planet_mc.tle
 file = planet_mc.tle
 color = "#00ffff"
-etag = 51c541b7952e13833b815baa750c6288
-size = 37259
+etag = 567356c2f98a73752ef4a1da7caa63b1
+size = 56767
 
 #[source 6]
 # name  = "Celestrak BREEZE-M radius/B"
